--- a/src/locales/zh_CN.json
+++ b/src/locales/zh_CN.json
@@ -1,16 +1,35 @@
 {
-	"title": "登录 nmTeam Account",
+	"logintitle": "登录 nmTeam Account",
 	"login": "登录",
 	"loginh": "登录 nmTeam Account",
 	"name": "用户名",
 	"password": "密码",
 	"captcha": "验证码",
-	"recoMe":"记住我",
+	"recoMe": "记住我",
 	"haveNoAccount0": "还没有账户？",
 	"haveNoAccount1": "立即注册",
 	"resigter": "注册",
-	"cr":"©版权所有 2021 nmTeam。保留所有权利。",
-	"enterAll":"您的信息未填写完整，请填写完整后再试。",
-	"errorNet":"抱歉，网络出现问题，请检查您的网络连接或稍后再试。详细信息：",
-	"errorOccured":"发生错误："
+	"cr": "©版权所有 2021 nmTeam。保留所有权利。",
+	"fillall": "您的信息未填写完整，请填写完整后再试。",
+	"checkterms": "请先阅读并同意上述条款与条件。",
+	"2timepwnotsame": "两次输入的密码不一致，请重试。",
+	"errorNet": "抱歉，网络出现问题，请检查您的网络连接或稍后再试。详细信息：",
+	"errorOccured": "发生错误：",
+	"registertitle": "注册 nmTeam Account",
+	"registerh": "注册 nmTeam Account",
+	"passwordAgain": "重复密码",
+	"readNeeds": "已阅读并同意 ",
+	"network-service-protocol": "服务协议",
+	"readNeeds2": " 和 ",
+	"privacy-policy": "隐私政策 ",
+	"haveAAccount0": "已有账户？",
+	"haveAAccount1": "点击登录",
+	"email": "电子邮箱",
+	"register": "注册",
+	"loging": "正在登录...",
+	"registering": "正在注册...",
+	"logok": "登录成功！",
+	"registerok": "注册成功！",
+	"lengthError": "用户名或密码长度不符合要求。",
+	"toContinue":"以继续"
 }
