--- a/src/locales/zh_CN.json
+++ b/src/locales/zh_CN.json
@@ -4,6 +4,7 @@
 	"loginh": "登录 nmTeam Account",
 	"name": "用户名",
 	"password": "密码",
+	"close": "关闭",
 	"captcha": "验证码",
 	"recoMe": "记住我",
 	"haveNoAccount0": "还没有账户？",
@@ -15,6 +16,7 @@
 	"2timepwnotsame": "两次输入的密码不一致，请重试。",
 	"errorNet": "抱歉，网络出现问题，请检查您的网络连接或稍后再试。详细信息：",
 	"errorOccured": "发生错误：",
+	"notLoged": "您还未登录，请先登录！",
 	"registertitle": "注册 nmTeam Account",
 	"registerh": "注册 nmTeam Account",
 	"passwordAgain": "重复密码",
@@ -31,5 +33,33 @@
 	"logok": "登录成功！",
 	"registerok": "注册成功！",
 	"lengthError": "用户名或密码长度不符合要求。",
-	"toContinue":"以继续"
+	"toContinue": "以继续",
+	"logoutok": "登出成功！",
+	"info": {
+		"come_soon":"此功能即将推出，敬请期待。",
+		"title": "nmTeam 账号中心",
+		"h1": "nmTeam Account Center",
+		"user": "用户名：",
+		"logout": "登出",
+		"changeInfo": "更改信息",
+		"close": "关闭",
+		"safeInfo":"保存",
+		"p": {
+			"old": "旧密码",
+			"new": "新密码",
+			"again": "再次输入"
+		},
+		"t": {
+			"nick": "昵称",
+			"name": "用户名",
+			"email": "电子邮箱",
+			"character": "角色"
+		},
+		"changePassword": "修改密码",
+		"changeAvatar": "设置新头像"
+	}
+	,"target":{
+		"account":"管理账户",
+		"browser_home_page":"nmBrowser 主页"
+	}
 }
