新增 网页调用用户信息API；改进 采用异步请求，避免浏览器卡顿（试验性）；调整 登录去向显示逻辑，默认显示翻译文本；更新 翻译

--- a/src/locales/en_US.json
+++ b/src/locales/en_US.json
@@ -1,54 +1,70 @@
 {
-	"aboutBox": {
-		"h1": "About the nmBrowser start page"
+	"2timepwnotsame": "The two passwords you entered do not match. Please retry.",
+	"captcha": "Verification",
+	"checkterms": "Please read and agree to our terms of use above first.",
+	"close": "Close",
+	"cr": "©Copyright 2021 nmTeam. All rights reserved.",
+	"email": "E-Mail",
+	"errorNet": "We're sorry, but something was wrong with the Internet. Please check your network connection or try again later. Details:",
+	"errorOccured": "An error occurred:",
+	"fillall": "Your information is not complete. Please fill it out and try again.",
+	"haveAAccount0": "Already have an account?",
+	"haveAAccount1": "Click here to login",
+	"haveNoAccount0": "Don't have an account yet?",
+	"haveNoAccount1": "Sign up now",
+	"info": {
+		"changeAvatar": "Set a New Avatar",
+		"changeInfo": "Edit",
+		"changePassword": "Change Password",
+		"close": "Close",
+		"come_soon": "This feature is coming soon, so stay tuned.",
+		"h1": "nmTeam Account Center",
+		"logout": "Sign Out",
+		"p": {
+			"again": "Re-Enter",
+			"new": "New Password",
+			"old": "Old Password"
+		},
+		"safeInfo": "Save",
+		"t": {
+			"character": "Character",
+			"email": "E-Mail",
+			"name": "Username",
+			"nick": "Nickname"
+		},
+		"title": "nmTeam Account Center",
+		"user": "Username: "
 	},
-	"cancel": "Cancel",
-	"close": "shut down",
-	"confirm": "Confirm",
-	"daochu": "Export",
-	"daoru": "Import",
-	"developing": "This feature is still under development, so stay tuned.",
-	"imgPicker": {
-		"h1": "Custom photo",
-		"p": "Enter the picture address:"
+	"lengthError": "The username or password length does not meet the requirements.",
+	"login": "Log In",
+	"loging": "Logging in...",
+	"loginh": "Log in to nmTeam Account",
+	"logintitle": "Log in to nmTeam Account",
+	"logok": "Login Successful!",
+	"logoutok": "Logged out successfully!",
+	"msg": {
+		"browser_home_page": "Log in to your nmTeam account to synchronize your favorite URLs and other settings between your devices.",
+		"website": "Log in to your nmTeam account on the nmTeam official website to get more services."
 	},
-	"linkEdit": {
-		"h1": "Edit quick link",
-		"tip": "You can insert up to 8 frequently used links."
+	"name": "Username",
+	"network-service-protocol": "Network Service Protocol",
+	"notLoged": "You have not logged in yet, please log in first!",
+	"password": "Password",
+	"passwordAgain": "Repeat Password",
+	"privacy-policy": "Privacy Policy",
+	"readNeeds": "I have read and agree",
+	"readNeeds2": " and ",
+	"recoMe": "Remember Me",
+	"register": "Register",
+	"registerh": "Register nmTeam Account",
+	"registering": "Registering...",
+	"registerok": "registration success!",
+	"registertitle": "Register nmTeam Account",
+	"resigter": "Registered",
+	"target": {
+		"account": "Manage Account",
+		"browser_home_page": "nmBrowser Homepage",
+		"website": "nmTeam Official Website"
 	},
-	"map": "Navigation",
-	"menu": {
-		"2ciyuan": "2element",
-		"LTB": "Upleft",
-		"RTB": "Upright",
-		"about": "About",
-		"baidu": "Baidu",
-		"bgImage": "Background",
-		"bgImageOri": "Source",
-		"bing": "Bing",
-		"bingImage": "Bing",
-		"close": "Off",
-		"colorAuto": "System",
-		"colorDark": "Dark",
-		"colorImg": "Identify",
-		"colorLight": "Bright",
-		"colorTheme": "Theme",
-		"google": "Google",
-		"lan": "Language",
-		"mamage": "Manage",
-		"news": "News ",
-		"open": "On",
-		"quickAccess": "Quick Links",
-		"searchBox": "Search Bar",
-		"searchE": "Engine",
-		"selfImg": "Customize",
-		"shide": "Blur background when searching",
-		"siteMap": "Navigation",
-		"time": "Replace title with time",
-		"wea": "the weather"
-	},
-	"news": "News",
-	"not_available_region": "Sorry, this service is not available in your country or region.",
-	"start": "Start",
-	"title": "Homepage"
+	"toContinue": "To Continue Surfing"
 }
