--- a/src/locales/zh_CN.json
+++ b/src/locales/zh_CN.json
@@ -1,65 +1,70 @@
 {
-	"logintitle": "登录 nmTeam Account",
-	"login": "登录",
-	"loginh": "登录 nmTeam Account",
-	"name": "用户名",
-	"password": "密码",
-	"close": "关闭",
-	"captcha": "验证码",
-	"recoMe": "记住我",
-	"haveNoAccount0": "还没有账户？",
-	"haveNoAccount1": "立即注册",
-	"resigter": "注册",
-	"cr": "©版权所有 2021 nmTeam。保留所有权利。",
-	"fillall": "您的信息未填写完整，请填写完整后再试。",
-	"checkterms": "请先阅读并同意上述条款与条件。",
 	"2timepwnotsame": "两次输入的密码不一致，请重试。",
+	"captcha": "验证码",
+	"checkterms": "请先阅读并同意上述条款与条件。",
+	"close": "关闭",
+	"cr": "©版权所有 2021 nmTeam。保留所有权利。",
+	"email": "电子邮箱",
 	"errorNet": "抱歉，网络出现问题，请检查您的网络连接或稍后再试。详细信息：",
 	"errorOccured": "发生错误：",
-	"notLoged": "您还未登录，请先登录！",
-	"registertitle": "注册 nmTeam Account",
-	"registerh": "注册 nmTeam Account",
-	"passwordAgain": "重复密码",
-	"readNeeds": "已阅读并同意 ",
-	"network-service-protocol": "服务协议",
-	"readNeeds2": " 和 ",
-	"privacy-policy": "隐私政策 ",
+	"fillall": "您的信息未填写完整，请填写完整后再试。",
 	"haveAAccount0": "已有账户？",
 	"haveAAccount1": "点击登录",
-	"email": "电子邮箱",
-	"register": "注册",
-	"loging": "正在登录...",
-	"registering": "正在注册...",
-	"logok": "登录成功！",
-	"registerok": "注册成功！",
-	"lengthError": "用户名或密码长度不符合要求。",
-	"toContinue": "以继续",
-	"logoutok": "登出成功！",
+	"haveNoAccount0": "还没有账户？",
+	"haveNoAccount1": "立即注册",
 	"info": {
-		"come_soon":"此功能即将推出，敬请期待。",
-		"title": "nmTeam 账号中心",
-		"h1": "nmTeam Account Center",
-		"user": "用户名：",
-		"logout": "登出",
+		"changeAvatar": "设置新头像",
 		"changeInfo": "更改信息",
-		"close": "关闭",
-		"safeInfo":"保存",
-		"p": {
-			"old": "旧密码",
-			"new": "新密码",
-			"again": "再次输入"
-		},
-		"t": {
-			"nick": "昵称",
-			"name": "用户名",
-			"email": "电子邮箱",
-			"character": "角色"
-		},
 		"changePassword": "修改密码",
-		"changeAvatar": "设置新头像"
-	}
-	,"target":{
-		"account":"管理账户",
-		"browser_home_page":"nmBrowser 主页"
-	}
+		"close": "关闭",
+		"come_soon": "此功能即将推出，敬请期待。",
+		"h1": "nmTeam Account Center",
+		"logout": "登出",
+		"p": {
+			"again": "再次输入",
+			"new": "新密码",
+			"old": "旧密码"
+		},
+		"safeInfo": "保存",
+		"t": {
+			"character": "角色",
+			"email": "电子邮箱",
+			"name": "用户名",
+			"nick": "昵称"
+		},
+		"title": "nmTeam 账号中心",
+		"user": "用户名："
+	},
+	"lengthError": "用户名或密码长度不符合要求。",
+	"login": "登录",
+	"loging": "正在登录...",
+	"loginh": "登录 nmTeam Account",
+	"logintitle": "登录 nmTeam Account",
+	"logok": "登录成功！",
+	"logoutok": "登出成功！",
+	"msg": {
+		"browser_home_page": "登录 nmTeam 账号即可将最爱的网址和其他设置在您的设备间同步。",
+		"website": "在 nmTeam 官方网站登录您的 nmTeam 账户以获取更多服务。"
+	},
+	"name": "用户名",
+	"network-service-protocol": "服务协议",
+	"notLoged": "您还未登录，请先登录！",
+	"password": "密码",
+	"passwordAgain": "重复密码",
+	"privacy-policy": "隐私政策 ",
+	"readNeeds": "已阅读并同意 ",
+	"readNeeds2": " 和 ",
+	"recoMe": "记住我",
+	"register": "注册",
+	"registerh": "注册 nmTeam Account",
+	"registering": "正在注册...",
+	"registerok": "注册成功！",
+	"registertitle": "注册 nmTeam Account",
+	"resigter": "注册",
+	"target": {
+		"account": "管理账户",
+		"browser_home_page": "nmBrowser 主页",
+		"website": "nmTeam 官网"
+	},
+	"toContinue": "以继续"
 }
