--- a/src/locales/ja_JP.json
+++ b/src/locales/ja_JP.json
@@ -1,13 +1,42 @@
 {
 	"2timepwnotsame": "入力した2つのパスワードが一致しません。もう一度やり直してください。",
+	"activation": {
+		"doing": "メールアドレスを確認しています...",
+		"error": "申し訳ありませんが、エラーのため、メールアドレスを正常に確認できませんでした。詳細：",
+		"lackinfo": "URLにすべての情報が含まれていないため、検証に失敗しました。\nこれは、電子メールアプリケーションのエラー、またはコピーしたURLが不完全であることが原因である可能性があります。\nメールに記載されているリンクを完全にコピーして、もう一度お試しください。この問題が再発する場合は、nmTeamに連絡してください。",
+		"success": "検証は成功です！",
+		"tip": "nmTeamアカウントを登録する最後のステップとして、メールアドレスを確認して自分のメールアドレスであることを確認する必要があります。\nメールアドレスを確認できない場合は、このページを更新してみてください。これが解決しない場合は、nmTeamに連絡してください。"
+	},
+	"activationh": "Eメールを確認します",
+	"activationtitle": "Eメールを確認します",
 	"captcha": "確認コード",
-	"checkterms": "まず、上記の利用規約をお読みになり、同意してください。",
+	"changeavatar": {
+		"error": "申し訳ありませんが、エラーのため、アバターを正常に設定できませんでした。詳細：",
+		"givealink": "有効な写真の住所を入力してください。",
+		"success": "プロフィール写真が正常に設定されました。",
+		"tip0": "nmTeamアカウントのプロフィール写真を更新します。",
+		"tip1": "https://example.com/example.pngなど、httpsプロトコルを使用し、画像に直接リンクしているURLを入力してください。",
+		"tip2": "写真をTubedにアップロードして、リンクを取得できます。",
+		"tip3": "プロフィール写真ファイルを直接アップロードすることもできます。",
+		"uploadbutton": "画像をアップロード"
+	},
+	"changeinfo": {
+		"error": "申し訳ありませんが、エラーのため、ユーザー情報を正常に変更できませんでした。詳細：",
+		"success": "ユーザー情報は正常に変更されました。"
+	},
+	"changepw": {
+		"error": "申し訳ありませんが、エラーのため、パスワードを正常に変更できませんでした。詳細：",
+		"success": "パスワードを正常に変更します。 nmTeamアカウントに再度ログインしてください。"
+	},
+	"checkterms": "登録する前に、上記の利用規約を読んで同意してください。",
 	"close": "閉じる",
 	"cr": "©著作権 2021 nmTeam。全著作権所有。",
 	"email": "Eメール",
 	"errorNet": "申し訳ありませんが、ネットワークに問題があります。ネットワーク接続を確認するか、しばらくしてからもう一度お試しください。詳細：",
 	"errorOccured": "エラーが発生しました：",
 	"fillall": "情報が完全に入力されていません。入力して、もう一度お試しください。",
+	"forgetPW0": "パスワードを忘れましたか？",
+	"forgetPW1": "パスワードをリセット",
 	"haveAAccount0": "すでにアカウントをお持ちですか？",
 	"haveAAccount1": "クリックしてログイン",
 	"haveNoAccount0": "まだアカウントをお持ちではありませんか？",
@@ -48,6 +77,7 @@
 	},
 	"name": "ユーザー名",
 	"network-service-protocol": "サービス契約",
+	"networkerror": "ネットワークエラー。",
 	"notLoged": "まだログインしていませんので、まずはログインしてください！",
 	"password": "パスワード",
 	"passwordAgain": "パスワードを繰り返す",
@@ -58,9 +88,29 @@
 	"register": "登録",
 	"registerh": "nmTeamアカウントを登録する",
 	"registering": "登録中...",
-	"registerok": "登録完了！",
+	"registerok0": "登録申請が正常に送信されました！",
+	"registerok1": "あなたのメールアドレスにログインし、私達はちょうどこの電子メールアドレスが自分のものであることを確認するために、電子メールアドレスの検証を完了するために、あなたのメールアドレスに送信されたことを、起動操作を完了するためのリンクを電子メール内のリンクをクリックしてください。",
+	"registerok2": "電子メールが届かない場合は、再送信するか、スパムで検索してメールボックスのごみ箱に入れることができます。確認が成功したら、ページの下部にあるリンクをクリックして、ログインページに戻ることができます。",
+	"registerok3": "メールの再送リクエスト",
 	"registertitle": "nmTeamアカウントを登録する",
+	"reset": {
+		"lackinfo": "URLにすべての情報が含まれていないため、検証に失敗しました。\nこれは、電子メールアプリケーションのエラー、またはコピーしたURLが不完全であることが原因である可能性があります。\nメールに記載されているリンクを完全にコピーして、もう一度お試しください。この問題が再発する場合は、nmTeamに連絡してください。",
+		"nofill": "続行する前に、完全な情報を入力してください。",
+		"senderror": "申し訳ありませんが、メールを送信できませんでした。エラーメッセージ：",
+		"sendsuccess": "メールが正常に送信されました！",
+		"seterror": "申し訳ありませんが、パスワードの設定に失敗しました。エラーメッセージ：",
+		"setnotmatch": "入力した2つのパスワードに矛盾があります。再入力してください。",
+		"setsuccess": "パスワードが正常にリセットされました！"
+	},
+	"reseth": "パスワードをリセット",
+	"reseth2": "まず、登録に使用したメールアドレスを入力してください。",
+	"resetnh2": "これで、新しいパスワードを設定できます。",
+	"resetntip": "新しいパスワードを覚えておいてください。",
+	"resettip": "次のステップに進むために、メールボックスにメールを送信します。\nまたは、メールを使用することさえできない場合は、nmTeamに連絡してサポートを受けてください。",
+	"resettitle": "nmTeamアカウントのパスワードをリセットします",
 	"resigter": "登録",
+	"sendResetEmail": "確認メールを送信する",
+	"setNewPassword": "設定",
 	"target": {
 		"account": "アカウントを管理する",
 		"browser_home_page": "nmBrowser ホームページ",
