--- a/src/locales/zh_TW.json
+++ b/src/locales/zh_TW.json
@@ -1,13 +1,42 @@
 {
 	"2timepwnotsame": "兩次輸入的密碼不一致，請重試。",
+	"activation": {
+		"doing": "正在驗證您的郵箱地址......",
+		"error": "抱歉，由於出現錯誤，未能成功驗證您的郵箱地址。詳細信息：",
+		"lackinfo": "驗證失敗，因為您的 URL 未包含全部信息。\n這可能是因為您的電子郵箱應用程序產生了錯誤或者您複製的 URL 不完整。\n請確保完整復制郵件中提供的鏈接並重試。如果此問題反復出現，請嘗試與 nmTeam 聯繫以獲取幫助。",
+		"success": "驗證成功！",
+		"tip": "作為註冊 nmTeam 賬號的最後一步，我們需要驗證您的電子郵件地址以確保這是您本人的電子郵件地址。\n如果未能驗證您的電子郵件地址，您可嘗試刷新此頁面。如果這沒有解決，請與 nmTeam 取得聯繫以獲取幫助。"
+	},
+	"activationh": "驗證電子郵箱",
+	"activationtitle": "驗證電子郵箱",
 	"captcha": "驗證碼",
-	"checkterms": "請先閱讀並同意上述條款與條件。",
+	"changeavatar": {
+		"error": "抱歉，由於出現錯誤，未能成功設置頭像。詳細信息：",
+		"givealink": "請提供有效的圖片地址。",
+		"success": "設置頭像成功。",
+		"tip0": "更新您的 nmTeam Account 頭像。",
+		"tip1": "請填寫使用 https 協議並直接鏈接到圖像的 URL，例如 https://example.com/example.png。",
+		"tip2": "您可以將圖片上傳到圖床並獲取鏈接。",
+		"tip3": "您也可以直接上傳頭像圖片文件：",
+		"uploadbutton": "上傳圖片"
+	},
+	"changeinfo": {
+		"error": "抱歉，由於出現錯誤，未能成功修改用戶信息。詳細信息：",
+		"success": "修改用戶信息成功。"
+	},
+	"changepw": {
+		"error": "抱歉，由於出現錯誤，未能成功修改密碼。詳細信息：",
+		"success": "修改密碼成功。請重新登錄 nmTeam 賬戶。"
+	},
+	"checkterms": "註冊前請先閱讀並同意上述條款與條件。",
 	"close": "關閉",
 	"cr": "©版權所有 2021 nmTeam。保留所有權利。",
 	"email": "電子郵箱",
 	"errorNet": "抱歉，網絡出現問題，請檢查您的網絡連接或稍後再試。詳細信息：",
 	"errorOccured": "發生錯誤：",
 	"fillall": "您的信息未填寫完整，請填寫完整後再試。",
+	"forgetPW0": "忘記了密碼？",
+	"forgetPW1": "重置密碼",
 	"haveAAccount0": "已有賬戶？",
 	"haveAAccount1": "點擊登錄",
 	"haveNoAccount0": "還沒有賬戶？",
@@ -48,6 +77,7 @@
 	},
 	"name": "用戶名",
 	"network-service-protocol": "服務協議",
+	"networkerror": "網絡錯誤。",
 	"notLoged": "您還未登錄，請先登錄！",
 	"password": "密碼",
 	"passwordAgain": "重複密碼",
@@ -58,9 +88,29 @@
 	"register": "註冊",
 	"registerh": "註冊 nmTeam Account",
 	"registering": "正在註冊...",
-	"registerok": "註冊成功！",
+	"registerok0": "註冊申請提交成功！",
+	"registerok1": "請登錄您的電子郵箱並點擊我們剛剛向您的電子郵箱地址發送的一封附有可以完成激活操作的鏈接的電子郵件中的鏈接來完成電子郵箱地址驗證以確認此電子郵箱地址為您本人所有。",
+	"registerok2": "如果沒有收到郵件，您可以嘗試重新發送或在郵箱的垃圾郵件和回收站尋找。驗證成功後，可以點擊頁面下方的鏈接回到登錄頁面。",
+	"registerok3": "申請重新發送郵件",
 	"registertitle": "註冊 nmTeam Account",
+	"reset": {
+		"lackinfo": "驗證失敗，因為您的 URL 未包含全部信息。\n這可能是因為您的電子郵箱應用程序產生了錯誤或者您複製的 URL 不完整。\n請確保完整復制郵件中提供的鏈接並重試。如果此問題反復出現，請嘗試與 nmTeam 聯繫以獲取幫助。",
+		"nofill": "請輸入完整的信息後繼續操作。",
+		"senderror": "抱歉，郵件發送失敗。錯誤信息：",
+		"sendsuccess": "郵件發送成功！",
+		"seterror": "抱歉，設置密碼失敗。錯誤信息：",
+		"setnotmatch": "兩次輸入的密碼不一致，請重新輸入。",
+		"setsuccess": "密碼重置成功！"
+	},
+	"reseth": "重置密碼",
+	"reseth2": "首先，請輸入您用於註冊的電子郵箱地址。",
+	"resetnh2": "現在可以設置新的密碼了。",
+	"resetntip": "請牢記您的新密碼。",
+	"resettip": "要進行下一步，我們將發送一封郵件到您的郵箱。\n或者，如果您連郵箱都無法使用，請聯繫 nmTeam 以獲取支持。",
+	"resettitle": "重置 nmTeam 賬號的密碼",
 	"resigter": "註冊",
+	"sendResetEmail": "發送確認郵件",
+	"setNewPassword": "設置",
 	"target": {
 		"account": "管理賬戶",
 		"browser_home_page": "nmBrowser 主頁",
