--- a/src/locales/zh_CN.json
+++ b/src/locales/zh_CN.json
@@ -1,13 +1,42 @@
 {
-	"2timepwnotsame": "两次输入的密码不一致，请重试。",
+	"2timepwnotsame": "两次输入的密码不一致，请重新输入密码。",
+	"activation": {
+		"doing": "正在验证您的邮箱地址......",
+		"error": "抱歉，由于出现错误，未能成功验证您的邮箱地址。详细信息：",
+		"lackinfo": "验证失败，因为您的 URL 未包含全部信息。\n这可能是因为您的电子邮箱应用程序产生了错误或者您复制的 URL 不完整。\n请确保完整复制邮件中提供的链接并重试。如果此问题反复出现，请尝试与 nmTeam 联系以获取帮助。",
+		"success": "验证成功！",
+		"tip": "作为注册 nmTeam 账号的最后一步，我们需要验证您的电子邮件地址以确保这是您本人的电子邮件地址。\n如果未能验证您的电子邮件地址，您可尝试刷新此页面。如果这没有解决，请与 nmTeam 取得联系以获取帮助。"
+	},
+	"activationh": "验证电子邮箱",
+	"activationtitle": "验证电子邮箱",
 	"captcha": "验证码",
-	"checkterms": "请先阅读并同意上述条款与条件。",
+	"changeavatar": {
+		"error": "抱歉，由于出现错误，未能成功设置头像。详细信息：",
+		"givealink": "请提供有效的图片地址。",
+		"success": "设置头像成功。",
+		"tip0": "更新您的 nmTeam Account 头像。",
+		"tip1": "请填写使用 https 协议并直接链接到图像的 URL，例如 https://example.com/example.png。",
+		"tip2": "您可以将图片上传到图床并获取链接。",
+		"tip3": "您也可以直接上传头像图片文件：",
+		"uploadbutton": "上传图片"
+	},
+	"changeinfo": {
+		"error": "抱歉，由于出现错误，未能成功修改用户信息。详细信息：",
+		"success": "修改用户信息成功。"
+	},
+	"changepw": {
+		"error": "抱歉，由于出现错误，未能成功修改密码。详细信息：",
+		"success": "修改密码成功。请重新登录 nmTeam 账户。"
+	},
+	"checkterms": "注册前请先阅读并同意上述条款与条件。",
 	"close": "关闭",
 	"cr": "©版权所有 2021 nmTeam。保留所有权利。",
 	"email": "电子邮箱",
-	"errorNet": "抱歉，网络出现问题，请检查您的网络连接或稍后再试。详细信息：",
+	"errorNet": "抱歉，网络出现问题导致操作失败。请检查您的网络连接或稍后再试。详细信息：",
 	"errorOccured": "发生错误：",
 	"fillall": "您的信息未填写完整，请填写完整后再试。",
+	"forgetPW0": "忘记了密码？",
+	"forgetPW1": "重置密码",
 	"haveAAccount0": "已有账户？",
 	"haveAAccount1": "点击登录",
 	"haveNoAccount0": "还没有账户？",
@@ -18,10 +47,10 @@
 		"changePassword": "修改密码",
 		"close": "关闭",
 		"come_soon": "此功能即将推出，敬请期待。",
-		"h1": "nmTeam Account Center",
+		"h1": "nmTeam 账户中心",
 		"logout": "登出",
 		"p": {
-			"again": "再次输入",
+			"again": "重复输入",
 			"new": "新密码",
 			"old": "旧密码"
 		},
@@ -48,6 +77,7 @@
 	},
 	"name": "用户名",
 	"network-service-protocol": "服务协议",
+	"networkerror": "网络错误。",
 	"notLoged": "您还未登录，请先登录！",
 	"password": "密码",
 	"passwordAgain": "重复密码",
@@ -58,20 +88,33 @@
 	"register": "注册",
 	"registerh": "注册 nmTeam Account",
 	"registering": "正在注册...",
-	"registerok": "注册成功！",
+	"registerok0": "注册申请提交成功！",
+	"registerok1": "请登录您的电子邮箱并点击我们刚刚向您的电子邮箱地址发送的一封附有可以完成激活操作的链接的电子邮件中的链接来完成电子邮箱地址验证以确认此电子邮箱地址为您本人所有。",
+	"registerok2": "如果没有收到邮件，您可以尝试重新发送或在邮箱的垃圾邮件和回收站寻找。验证成功后，可以点击页面下方的链接回到登录页面。",
+	"registerok3": "申请重新发送邮件",
 	"registertitle": "注册 nmTeam Account",
+	"reset": {
+		"lackinfo": "验证失败，因为您的 URL 未包含全部信息。\n这可能是因为您的电子邮箱应用程序产生了错误或者您复制的 URL 不完整。\n请确保完整复制邮件中提供的链接并重试。如果此问题反复出现，请尝试与 nmTeam 联系以获取帮助。",
+		"nofill": "请输入完整的信息后继续操作。",
+		"senderror": "抱歉，邮件发送失败。错误信息：",
+		"sendsuccess": "邮件发送成功！",
+		"seterror": "抱歉，设置密码失败。错误信息：",
+		"setnotmatch": "两次输入的密码不一致，请重新输入。",
+		"setsuccess": "密码重置成功！"
+	},
+	"reseth": "重置密码",
+	"reseth2": "首先，请输入您用于注册的电子邮箱地址。",
+	"resetnh2": "现在可以设置新的密码了。",
+	"resetntip": "请牢记您的新密码。",
+	"resettip": "要进行下一步，我们将发送一封邮件到您的邮箱。\n或者，如果您连邮箱都无法使用，请联系 nmTeam 以获取支持。",
+	"resettitle": "重置 nmTeam 账号的密码",
 	"resigter": "注册",
+	"sendResetEmail": "发送确认邮件",
+	"setNewPassword": "设置",
 	"target": {
 		"account": "管理账户",
 		"browser_home_page": "nmBrowser 主页",
 		"website": "nmTeam 官网"
 	},
-	"toContinue": "以继续","activationh":"验证电子邮箱","activationtitle":"验证电子邮箱",
-	"activation":{
-		"doing":"正在验证您的邮箱地址......",
-		"error":"抱歉，由于出现错误，未能成功验证您的邮箱地址。详细信息：",
-		"success":"验证成功！",
-		"lackinfo":"验证失败，因为您的信息提供的不充分。请检查是否您输入的是完整的 URL。",
-		"tip":"如果未能验证您的电子邮箱，您可尝试刷新此页面。如果问题未能解决，请与 nmTeam 取得联系以获取帮助。"
-	}
+	"toContinue": "以继续"
 }
