## 2021.07.05   ### 新功能 - 增加无法登录疑难解答  ### 修复和改进 - 修复编辑信息时保存按钮未出现的问题 - 新增不能设置昵称为空的提示 - 如果用户设备为 macOS 或 iOS，在首次访问时跳转到 api 域名以应对 WebKit 内核的 Cookie 策略（测试中）  ### 其它 - 提高系统的稳定性   - 优化系统的流畅度
## 2021.07.05
### 新功能
- 增加无法登录疑难解答

### 修复和改进
- 修复编辑信息时保存按钮未出现的问题
- 新增不能设置昵称为空的提示
- 如果用户设备为 macOS 或 iOS，在首次访问时跳转到 api 域名以应对 WebKit 内核的 Cookie 策略（测试中）

### 其它
- 提高系统的稳定性
- 优化系统的流畅度

--- a/src/locales/ja_JP.json
+++ b/src/locales/ja_JP.json
@@ -9,6 +9,21 @@
 	},
 	"activationh": "Eメールを確認します",
 	"activationtitle": "Eメールを確認します",
+	"cantLog": {
+		"0": "nmTeamは、Safariを使用したり、ブラウザを開いてサードパーティのCookieや同様の機能をブロックしたりする一部のユーザーが、次のようなnmTeamアカウントへのログインに問題がある可能性があることを発見しました。",
+		"1": "・ページは「ログイン...」状態のままです",
+		"2": "・正常にログインした後も、ターゲットアプリケーションにジャンプしたときにログインしていないことが表示されます",
+		"3": "・nmTeamアカウントセンターを使用してアカウントを管理する場合、ログインに成功すると管理ページにジャンプし、すぐにログインページにジャンプします。",
+		"4": "上記の状況が発生した場合は、ブラウザの設定を更新して問題を解決する必要があります。",
+		"5": "Safariユーザーの場合、またはiOSまたはiPadOSを使用している場合：",
+		"6": "1.「設定」に移動し、下にスクロールして「Safari」設定項目をクリックします。 macOSでは、[Safari]> [設定]を選択し、[プライバシー]をクリックします。",
+		"7": "2. [Safariの設定]で、[プライバシーとセキュリティ]設定の[クロスサイトトラッキングを防止する]オプションと[すべてのCookieをブロックする]オプションがオフになっていることを確認します。オフになっていない場合はオフにしてください。",
+		"8": "3.それでも問題が解決しない場合は、このリンクをクリックしてブラウザを再起動してください。通常、nmTeamユーザーセンターは、初めてアクセスしたときにこれを行うのに役立ちます。",
+		"9": "4.リンクにアクセスしても問題が解決しない場合は、nmteam.mlおよびapi-nmteam.agou.imのWebサイトデータをクリアしてみてください。これを行う方法については、AppleサポートWebサイトにアクセスしてください。",
+		"10": "別のデバイスでブラウザを使用していて問題が発生した場合：",
+		"11": "ブラウザプラグインをオフにするか、ブラウザのCookie関連の設定を変更するか、SafariユーザーまたはiOSまたはiPadOSを使用しているユーザー向けのソリューションを参照してください。それでも問題が解決しない場合は、ブラウザまたは別のデバイスを変更して、この問題をnmTeamに報告してください。",
+		"h": "nmTeamアカウントにログインするときに発生する問題の一般的な解決策"
+	},
 	"captcha": "確認コード",
 	"changeavatar": {
 		"error": "申し訳ありませんが、エラーのため、アバターを正常に設定できませんでした。詳細：",
@@ -41,6 +56,8 @@
 	"haveAAccount1": "クリックしてログイン",
 	"haveNoAccount0": "まだアカウントをお持ちではありませんか？",
 	"haveNoAccount1": "今すぐサインアップ",
+	"ifCantLogin0": "ログインまたはSafariを使用できませんか？",
+	"ifCantLogin1": "ログインできない場合のトラブルシューティングを参照してください",
 	"info": {
 		"changeAvatar": "新しいアバターを設定する",
 		"changeInfo": "情報の変更",
