--- a/src/locales/en_US.json
+++ b/src/locales/en_US.json
@@ -9,6 +9,21 @@
 	},
 	"activationh": "Verify Your E-mail",
 	"activationtitle": "Verify Your E-mail",
+	"cantLog": {
+		"0": "nmTeam found that some users who use Safari or open their browsers' feature to block third-party cookies or similar functions may have problems logging in to their nmTeam account, such as:",
+		"1": "·The page remains in the \"Login...\" state",
+		"2": "·After logging in successfully, it still shows that you are not logged in when you jump to the target application",
+		"3": "·When you use nmTeam Account Center to manage your account, you will jump to the management page after a successful login, and then quickly jump to the login page",
+		"4": "If the above situation occurs, you need to update your browser settings to solve the problem.",
+		"5": "If you are a Safari user or are using iOS or iPadOS:",
+		"6": "1. Go to \"Settings\", scroll down and click on the \"Safari\" setting item. Or on macOS, choose \"Safari\"> \"Preferences\" and click \"Privacy.\"",
+		"7": "2. In \"Safari Settings\", make sure that the \"Prevent Cross-Site Tracking\" and \"Block All Cookies\" options in the \"PRIVACY & SECURITY\" settings are turned off, otherwise please turn them off.",
+		"8": "3. If this does not solve the problem, please click this link and restart your browser. Normally, the nmTeam User Center will help you do this the first time you visit.",
+		"9": "4. If the problem persists after accessing the link, please try to clear the website data of nmteam.ml and api-nmteam.agou.im. Please visit the Apple Support website to learn how to do this.",
+		"10": "If you use a browser on another device and encounter problems:",
+		"11": "Please try to turn off your browser plug-in, change the cookie-related settings in your browser, or refer to the solutions for Safari users or users using iOS or iPadOS. If your problem still cannot be solved, please try to change your browser or another device, and report this problem to nmTeam.",
+		"h": "General Solutions to Problems Encountered When Logging In to an nmTeam Account"
+	},
 	"captcha": "Verification",
 	"changeavatar": {
 		"error": "Sorry, due to an error, the avatar could not be set successfully. Details:",
@@ -41,6 +56,8 @@
 	"haveAAccount1": "Click here to login",
 	"haveNoAccount0": "Don't have an account yet?",
 	"haveNoAccount1": "Sign up now",
+	"ifCantLogin0": "Can't log in or use Safari?",
+	"ifCantLogin1": "See troubleshooting for unable to log in",
 	"info": {
 		"changeAvatar": "Set a New Avatar",
 		"changeInfo": "Edit",
