--- a/src/locales/zh_CN.json
+++ b/src/locales/zh_CN.json
@@ -45,6 +45,7 @@
 	},
 	"checkterms": "注册前请先阅读并同意上述条款与条件。",
 	"close": "关闭",
+	"continueas": "继续使用",
 	"cr": "©版权所有 2021 nmTeam。保留所有权利。",
 	"email": "电子邮箱",
 	"errorNet": "抱歉，网络出现问题导致操作失败。请检查您的网络连接或稍后再试。详细信息：",
