--- a/src/locales/zh_TW.json
+++ b/src/locales/zh_TW.json
@@ -45,6 +45,7 @@
 	},
 	"checkterms": "註冊前請先閱讀並同意上述條款與條件。",
 	"close": "關閉",
+	"continueas": "繼續使用",
 	"cr": "©版權所有 2021 nmTeam。保留所有權利。",
 	"email": "電子郵箱",
 	"errorNet": "抱歉，網絡出現問題，請檢查您的網絡連接或稍後再試。詳細信息：",
