--- a/src/locales/ja_JP.json
+++ b/src/locales/ja_JP.json
@@ -45,6 +45,7 @@
 	},
 	"checkterms": "登録する前に、上記の利用規約を読んで同意してください。",
 	"close": "閉じる",
+	"continueas": "使い続ける",
 	"cr": "©著作権 2021 nmTeam。全著作権所有。",
 	"email": "Eメール",
 	"errorNet": "申し訳ありませんが、ネットワークに問題があります。ネットワーク接続を確認するか、しばらくしてからもう一度お試しください。詳細：",
