--- a/src/locales/ja_JP.json
+++ b/src/locales/ja_JP.json
@@ -28,6 +28,7 @@
 	"changeavatar": {
 		"error": "申し訳ありませんが、エラーのため、アバターを正常に設定できませんでした。詳細：",
 		"givealink": "有効な写真の住所を入力してください。",
+		"name": "アバターを設定する",
 		"success": "プロフィール写真が正常に設定されました。",
 		"tip0": "nmTeamアカウントのプロフィール写真を更新します。",
 		"tip1": "https://example.com/example.pngなど、httpsプロトコルを使用し、画像に直接リンクしているURLを入力してください。",
@@ -66,9 +67,11 @@
 		"close": "閉じる",
 		"come_soon": "この機能はまもなく登場しますので、ご期待ください。",
 		"h1": "nmTeam Account Center",
+		"infoName": "ユーザー情報",
 		"logout": "ログアウト",
 		"p": {
 			"again": "もう一度入力してください",
+			"name": "パスワードを変更する",
 			"new": "新しいパスワード",
 			"old": "以前のパスワード"
 		},
