--- a/src/locales/ja_JP.json
+++ b/src/locales/ja_JP.json
@@ -19,7 +19,7 @@
 		"6": "1.「設定」に移動し、下にスクロールして「Safari」設定項目をクリックします。 macOSでは、[Safari]> [設定]を選択し、[プライバシー]をクリックします。",
 		"7": "2. [Safariの設定]で、[プライバシーとセキュリティ]設定の[クロスサイトトラッキングを防止する]オプションと[すべてのCookieをブロックする]オプションがオフになっていることを確認します。オフになっていない場合はオフにしてください。",
 		"8": "3.それでも問題が解決しない場合は、このリンクをクリックしてブラウザを再起動してください。通常、nmTeamユーザーセンターは、初めてアクセスしたときにこれを行うのに役立ちます。",
-		"9": "4.リンクにアクセスしても問題が解決しない場合は、nmteam.mlおよびapi-nmteam.agou.imのWebサイトデータをクリアしてみてください。これを行う方法については、AppleサポートWebサイトにアクセスしてください。",
+		"9": "4.リンクにアクセスしても問題が解決しない場合は、nmteam.xyzおよびapi-nmteam.agou.imのWebサイトデータをクリアしてみてください。これを行う方法については、AppleサポートWebサイトにアクセスしてください。",
 		"10": "別のデバイスでブラウザを使用していて問題が発生した場合：",
 		"11": "ブラウザプラグインをオフにするか、ブラウザのCookie関連の設定を変更するか、SafariユーザーまたはiOSまたはiPadOSを使用しているユーザー向けのソリューションを参照してください。それでも問題が解決しない場合は、ブラウザまたは別のデバイスを変更して、この問題をnmTeamに報告してください。",
 		"h": "nmTeamアカウントにログインするときに発生する問題の一般的な解決策"
