--- a/src/locales/zh_CN.json
+++ b/src/locales/zh_CN.json
@@ -19,7 +19,7 @@
 		"6": "1. 转到“设置”，向下滚动并点击“Safari”设置项。在 macOS 上，请选取“Safari 浏览器”>“偏好设置”，然后点按“隐私”。",
 		"7": "2. 在“Safari 设置”中，确保“PRIVACY & SECURITY”设置中的“Prevent Cross-Site Tracking”和“Block All Cookies”选项均为关闭，否则请关闭它们。",
 		"8": "3. 如果这没有解决问题，请点击此链接后重新启动浏览器。通常情况下，nmTeam 用户中心会在您首次访问时帮助您进行此操作。",
-		"9": "4. 如果访问链接后问题依然存在，请尝试清除 nmteam.ml 和 api-nmteam.agou.im 的网站数据。请访问 Apple 支持网站了解如何做到这一点。",
+		"9": "4. 如果访问链接后问题依然存在，请尝试清除 nmteam.xyz 和 api-nmteam.agou.im 的网站数据。请访问 Apple 支持网站了解如何做到这一点。",
 		"10": "如果您使用其它设备上的浏览器并遇到问题：",
 		"11": "请尝试关闭您的浏览器插件，更改您浏览器中与 Cookie 有关的设置或参阅 Safari 用户或使用 iOS 或 iPadOS 的用户的解决方案。如果您的问题始终无法解决，请尝试更换浏览器或者换一台设备，并向 nmTeam 反馈此问题。",
 		"h": "登录 nmTeam 账号时遇到问题的一般解决方法"
