--- a/src/locales/zh_TW.json
+++ b/src/locales/zh_TW.json
@@ -19,7 +19,7 @@
 		"6": "1. 轉到“設置”，向下滾動並點擊“Safari”設置項。在 macOS 上，請選取“Safari 瀏覽器”>“偏好設置”，然後點按“隱私”。",
 		"7": "2. 在“Safari 設置”中，確保“PRIVACY & SECURITY”設置中的“Prevent Cross-Site Tracking”和“Block All Cookies”選項均為關閉，否則請關閉它們。",
 		"8": "3. 如果這沒有解決問題，請點擊此鏈接後重新啟動瀏覽器。通常情況下，nmTeam 用戶中心會在您首次訪問時幫助您進行此操作。",
-		"9": "4. 如果訪問鏈接後問題依然存在，請嘗試清除 nmteam.ml 和 api-nmteam.agou.im 的網站數據。請訪問 Apple 支持網站了解如何做到這一點。",
+		"9": "4. 如果訪問鏈接後問題依然存在，請嘗試清除 nmteam.xyz 和 api-nmteam.agou.im 的網站數據。請訪問 Apple 支持網站了解如何做到這一點。",
 		"10": "如果您使用其它設備上的瀏覽器並遇到問題：",
 		"11": "請嘗試關閉您的瀏覽器插件，更改您瀏覽器中與 Cookie 有關的設置或參閱 Safari 用戶或使用 iOS 或 iPadOS 的用戶的解決方案。如果您的問題始終無法解決，請嘗試更換瀏覽器或者換一台設備，並向 nmTeam 反饋此問題。",
 		"h": "登錄 nmTeam 賬號時遇到問題的一般解決方法"
