--- a/src/locales/zh_CN.json
+++ b/src/locales/zh_CN.json
@@ -44,6 +44,7 @@
 		"success": "设置头像成功。稍后您应该可以查看您的新头像。",
 		"tip0_0": "请从设备中选择一张照片。",
 		"tip0_1": "上传一张图片后，您将可以进行下一步。",
+		"tip0_2": "请确保头像不包含不健康或相关法律法规与 nmTeam 规定禁止的内容，否则您的账号可能被禁用。",
 		"tip1_0": "请裁剪这张照片。",
 		"tip3": "将照片调整到合适的大小后，请确认设置头像。",
 		"uploadbutton": "上传图片"
