--- a/src/locales/zh_HK.json
+++ b/src/locales/zh_HK.json
@@ -44,6 +44,7 @@
 		"success": "設置大頭貼成功。稍後您應該可以查看您的新大頭貼。",
 		"tip0_0": "請從設備中選擇一張相片。",
 		"tip0_1": "上傳一張相片後，您將可以進行下一步。",
+		"tip0_2": "請確保大頭貼不包含不健康或相關法律法規與 nmTeam 規定禁止的內容，否則您的賬號可能被禁用。",
 		"tip1_0": "請裁剪這張相片。",
 		"tip3": "將相片調整到合適的大小後，請確認設置大頭貼。",
 		"uploadbutton": "上傳相片"
